LF-20205 - Text on Media Wall content cards don't wrap correctly in IE11 - Also made "title text" on Media Wall content cards wrap correctly in IE11.

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -92,7 +92,7 @@ article.content .content-source-logo {
 .content-created-at {
     white-space: nowrap;
 }
-.content-body-main {
+.content-body-main, .content-body-title {
     word-break: keep-all;
     word-wrap: break-word;
 }
